--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <h3>
+        <ul>
+            <li><a href="./recipes/french-onion-soup.html">French Onion Soup</a></li>
+            <li><a href="./recipes/twice-baked-potatoes.html">Twice Baked Potatoes</a></li>
+        </ul>
+    </h3>
 </body>
 
 </html>
