Add home button to french onion soup and baked potatoes

--- a/recipes/twice-baked-potatoes.html
+++ b/recipes/twice-baked-potatoes.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <a href="../index.html">Home</a>
     <h1>Delicious Twice Baked Potatoes</h1>
     <img src="../images/twice-baked-potatoes-head.jpg">
     <h3>Twice baked potatoes are an easy and delicous side that works well
