--- a/recipes/french-onion-soup.html
+++ b/recipes/french-onion-soup.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <a href="../index.html">Home</a>
     <h1>French Onion Soup</h1>
     <img src="../images/french-onion-soup-head.jpg">
     <h1>Chef's Kiss</h1>
