Finish French Onion Soup Page

--- a/recipes/french-onion-soup.html
+++ b/recipes/french-onion-soup.html
@@ -9,7 +9,26 @@
     <a href="../index.html">Home</a>
     <h1>French Onion Soup</h1>
     <img src="../images/french-onion-soup-head.jpg">
-    <h1>Chef's Kiss</h1>
+    <h3>French onion soup is a delicious hearty treat, perfect on a cold evening to warm up
+        your belly and heart!
+    </h3>
+    <h4>Ingredients</h4>
+    <ul style="list-style-type:none;">
+        <li>Onions, peeled: 20 lbs</li>
+        <li>Beef Stock: A lot</li>
+        <li>Mozzerrela: 3 Cups</li>
+        <li>salt: 1 TBSP</li>
+        <li>pepper: Grind grind grind</li>
+        <li>virgin blood: 3 quarts</li>
+    </ul>
+    <h4>Directions</h4>
+    <ol>
+        <li>Place onions in large pot with beef stock. Simmer for 4 hours.</li>
+        <li>Add salt, pepper, virgins blood to taste</li>
+        <li>Scoop contents of pot into small, oven safe bowls.</li>
+        <li>Top bowls with cheese and broil until cheese is almost burnt</li>
+        <li>Viola! You now have fresh onion soup to fill ya up!</li>
+    </ol>
 </body>
 
 </html>
