--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="./recipes/french-onion-soup.html">French Onion Soup</a></li>
             <li><a href="./recipes/twice-baked-potatoes.html">Twice Baked Potatoes</a></li>
+            <li><a href="./recipes/how-to-twerk.html">How To Twerk</a></li>
         </ul>
     </h3>
 </body>
