--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Dank Recipes</title>
+<style>
+    img {
+        height: auto;
+        width: 500px;
+    }
+</style>
 </head>
 
 <body>
