--- a/recipes/french-onion-soup.html
+++ b/recipes/french-onion-soup.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>French Onion Soup Recipe</title>
+    <style>
+        img {
+            height: auto;
+            width: 500px;
+        }
+    </style>
 </head>
 
 <body>
