--- a/recipes/how-to-twerk.html
+++ b/recipes/how-to-twerk.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Morbin Time</title>
+    <style>
+        img {
+            height: auto;
+            width: 500px;
+        }
+        #boi{
+            height: auto;
+            width: 300px;
+        }
+    </style>
 </head>
 <body>
     <a href="../index.html">Home</a>
-    <img src="../images/among-us-twerk.gif">
+    <img src="../images/among-us-twerk.gif" id="boi">
+    <p> </p>
     <h1>Look at that boi move!</h1>
     <h3> Twerking is a fun family activity to help you bond and get some excercise!</h3>
     <h4>Ingredients</h4>
