Create css sheet and add style to all pages

--- a/recipes/french-onion-soup.html
+++ b/recipes/french-onion-soup.html
@@ -3,23 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>French Onion Soup Recipe</title>
-    <style>
-        img {
-            height: auto;
-            width: 500px;
-        }
-    </style>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 
 <body>
     <a href="../index.html">Home</a>
     <h1>French Onion Soup</h1>
-    <img src="../images/french-onion-soup-head.jpg">
+    <div><img src="../images/french-onion-soup-head.jpg"></div>
     <h3>French onion soup is a delicious hearty treat, perfect on a cold evening to warm up
         your belly and heart!
     </h3>
-    <h4>Ingredients</h4>
-    <ul style="list-style-type:none;">
+    <h4 class="heading">Ingredients</h4>
+    <ul>
         <li>Onions, peeled: 20 lbs</li>
         <li>Beef Stock: A lot</li>
         <li>Mozzerrela: 3 Cups</li>
