--- a/recipes/how-to-twerk.html
+++ b/recipes/how-to-twerk.html
@@ -13,6 +13,7 @@
             width: 300px;
         }
     </style>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
