--- a/recipes/twice-baked-potatoes.html
+++ b/recipes/twice-baked-potatoes.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Twice Baked Potatoes</title>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a class="navigation-links" href="../index.html">Home</a>
     <h1>Delicious Twice Baked Potatoes</h1>
     <img src="../images/twice-baked-potatoes-head.jpg">
     <h3>Twice baked potatoes are an easy and delicous side that works well
